--- a/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
@@ -1,5 +1,5 @@
 \section{Transfer Learning}
-
+\label{sec:transfer_learning}
 \begin{figure*}
 	\centering
 	\includegraphics[width=0.9\textwidth]{../img/architecture/transfer_taxo}
