Small edits in Experiments & Transfer Learning sections.

--- a/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
@@ -47,7 +47,7 @@ We now formally define 3 kinds of transfer learning problems, namely,
 and \emph{reasoning transfer}.
 These are illustrated in~\cref{fig:taskonomy} using representative examples from CLEVR-CoGenT and COG datasets that are particularly suited for experimental
 investigations of transfer learning.
-In the next section we detail the performance of
+In \cref{sec:experiments}, we detail the performance of
 SAMNet for each of these 3 kinds, using the CLEVR-CoGenT dataset
 for feature transfer, the COG dataset for temporal transfer, and finally
 both datasets for reasoning transfer, with appropriate baseline comparisons.
