--- a/Transfer_Learning/cvpr_2nd_submission/experiments.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/experiments.tex
@@ -29,20 +29,19 @@ Drawing on the taxonomy presented in \cref{sec:transfer_learning}, we organize t
 	\label{tab:cogent_conditions}
 \end{table}
 
-For the CLEVR dataset, we consider the 5 question categories defined by the authors: \textit{Exist}, \textit{Count}, \textit{CompareInteger}, \textit{CompareAttribute}, \textit{QueryAttribute}. We also consider the CoGenT (Constrained Generalization Test) variant of CLEVR which contains 2 conditions, differing by the available combinations of 8 object color-attributes. The colors are partitioned into two complementary families:
+For CLEVR, we consider the 5 question categories defined by the authors: \textit{Exist}, \textit{Count}, \textit{CompareInteger}, \textit{CompareAttribute}, \textit{QueryAttribute}. We also consider the CoGenT (Constrained Generalization Test) variant of CLEVR which contains 2 conditions, differing by the available combinations of 8 object color-attributes. The colors are partitioned into two complementary families:
 Gray, Blue, Brown and Yellow in \textbf{Family A} and Red, Green, Purple, Cyan in \textbf{Family B}.
 The cubes and cylinders take colors from complementary families in each variant with opposite configurations while the spheres can take any color (See~\cref{tab:cogent_conditions}).
 As the input domain consist of the set of objects with all attribute values, both variants differ by their marginal distributions $P_S$ and $P_T$.
 
-We compare SAMNet's performance to several models: Transparency by Design networks (TbD)~\cite{mascharka2018transparency}, Feature-wise Linear Modulation (FiLM)~\cite{perez2018film} and the Program Generator + Execution Engine (PG + EE), presented in \cite{johnson2017inferring}. For performance reasons, we deactivated the external memory and temporally-related modules in SAMNet as they are unnecessary while reasoning about static images.
-Results are shown in \cref{fig:clevr-baseline-compare}. \vm{Not sure what else to say here..}
+We compare SAMNet's performance to several models: Transparency by Design networks (TbD)~\cite{mascharka2018transparency}, Feature-wise Linear Modulation (FiLM)~\cite{perez2018film} and the Program Generator + Execution Engine (PG + EE), presented in \cite{johnson2017inferring}. For performance reasons, we deactivated the external memory and temporally-related modules in SAMNet as they are unnecessary while reasoning about static images. SAMNet reaches 96.2\% accuracy on CLEVR, compared to 96.9\%, 97.7\% and 98.7\% for PG + EE, FiLM and TbD respectively.
 
-\begin{figure}[!t]
-	\centering
-	\includegraphics[width=\columnwidth]{../results/CLEVR_baselines_comparison.pdf}
-	\caption{Comparison of SAMNet to baseline models~\cite{mascharka2018transparency, perez2018film, johnson2017inferring} on CLEVR.}
-	\label{fig:clevr-baseline-compare}
-\end{figure}
+% \begin{figure}[!t]
+% 	\centering
+% 	\includegraphics[width=\columnwidth]{../results/CLEVR_baselines_comparison.pdf}
+% 	\caption{Comparison of SAMNet to baseline models~\cite{mascharka2018transparency, perez2018film, johnson2017inferring} on CLEVR.}
+% 	\label{fig:clevr-baseline-compare}
+% \end{figure}
 
 \begin{figure}[htb]
 	\centering
