--- a/Transfer_Learning/cvpr_2nd_submission/experiments.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/experiments.tex
@@ -36,14 +36,14 @@ As the input domain consist of the set of objects with all attribute values, bot
 
 We compare SAMNet's performance to several models: Transparency by Design networks (TbD)~\cite{mascharka2018transparency}, Feature-wise Linear Modulation (FiLM)~\cite{perez2018film} and the Program Generator + Execution Engine (PG + EE), presented in \cite{johnson2017inferring}. For performance reasons, we deactivated the external memory and temporally-related modules in SAMNet as they are unnecessary while reasoning about static images. SAMNet reaches 96.2\% accuracy on CLEVR, compared to 96.9\%, 97.7\% and 98.7\% for PG + EE, FiLM and TbD respectively.
 
-% \begin{figure}[!t]
-% 	\centering
-% 	\includegraphics[width=\columnwidth]{../results/CLEVR_baselines_comparison.pdf}
-% 	\caption{Comparison of SAMNet to baseline models~\cite{mascharka2018transparency, perez2018film, johnson2017inferring} on CLEVR.}
-% 	\label{fig:clevr-baseline-compare}
-% \end{figure}
+\begin{figure}[htbp]
+	\centering
+ 	\includegraphics[width=\columnwidth]{../results/CLEVR_baselines_comparison.pdf}
+ 	\caption{Comparison of SAMNet to baseline models~\cite{mascharka2018transparency, perez2018film, johnson2017inferring} on CLEVR.}
+ 	\label{fig:clevr-baseline-compare}
+\end{figure}
 
-\begin{figure}[htb]
+\begin{figure}[htbp]
 	\centering
 	\includegraphics[width=\columnwidth]{../img/architecture/hierarchy}
 	\caption{Hierarchy of Task Groups in the COG dataset.}
