--- a/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/transfer_learning.tex
@@ -7,7 +7,7 @@
 \end{figure*}
 Due to the complex nature of visual reasoning, it appears that
 transfer learning from a source domain to a target domain can be investigated in
-multiple ways, depending on how the features are related between the two domains. This includes attributes such as size, color and shape, as well as temporal characteristics reflected in the number of frames and the scene complexity.
+multiple ways, depending on how the two domains are related. This includes visual attributes such as size, color and shape, temporal characteristics reflected in the number of frames and scene complexity, and finally the reasoning difficulty. 
 To establish a formal framework for these various aspects, we first recall the basic definition of transfer learning~\cite{pan2009survey}.
 
 A \emph{domain} is a pair $\cD = (\cX,P(X))$, where $\cX$ is a feature space and $P(X)$ is a marginal probability distribution.
