--- a/Transfer_Learning/cvpr_2nd_submission/experiments.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/experiments.tex
@@ -2,55 +2,34 @@
 \label{sec:experiments}
 % \tk{order: CLEVR + baselines without TL, COG + baseline without TL, Feature Transfer-CLEVR/CoGenT, Temporal Transfer - COG, Reasoning Transfer - CLEVR/CoGenT, Reasoning Transfer-COG}
 
-We implemented and trained our SAMNet model using MI-Prometheus~\cite{kornuta2018accelerating}, a framework based on Pytorch~\cite{paszke2017automatic}.
-We evaluated the model on the COG dataset~\cite{yang2018dataset}, a video reasoning~\cite{mogadala2019trends} dataset developed for the purpose of research on relational and temporal reasoning, as well as on the CLEVR dataset~\cite{johnson2017clevr}, created for Image Question Answering research.\\
-Drawing on the taxonomy presented in \cref{sec:transfer_learning}, we organize the experiments in the following order. We first briefly describe both datasets and how their characteristics help evaluate transfer learning abilities, before comparing SAMNet to existing baselines. Next, we interest ourselves in the feature transfer setting using CoGenT, followed by the temporal transfer on COG. Then, we assess SAMNet's capacity to transfer reasoning, by presenting a final set of experiments using the questions categories in both datasets.
+We implemented and trained our SAMNet model using MI-Prometheus~\cite{kornuta2018accelerating}, a framework based on PyTorch~\cite{paszke2017automatic}.
+We evaluated the model on 
+the CLEVR dataset~\cite{johnson2017clevr}, a diagnostic dataset for Image Question Answering and on the COG dataset~\cite{yang2018dataset}, a video reasoning~\cite{mogadala2019trends} dataset developed for the purpose of research on relational and temporal reasoning.
+We briefly describe both datasets in the following two subsections.
+We also present comparison of SAMNet with the existing baselines as a sanity check. 
+In all experiments we used SAMNet using $k = 8$ reasoning steps and external memory with $N = 8$ slots, each storing an array of 128 floats. 
 
-\subsection{Performance of SAMNet on CLEVR}
-\label{sec:clevr-baseline-compare}
+The rest of experiments is following the proposed taxonomy.
+First, we investigate the feature transfer using the CLEVR-CoGenT variants, followed by the temporal transfer on COG. Finally, we assess SAMNet's transfer reasoning capabilities on both datasets by regrouping and reorganizing classes of questions into new training and test splits.
 
-% \tk{description of CLEVR and CoGenT datasets, task families/groups}
-% \tk{comparison of our model with selected baselines - pure CLEVR? (or CoGenT?), no transfer learning}
-% \tk{figure(s) with accuracy on CLEVR/CoGenT is/are missing!}
-
-\begin{table}[ht]
+\begin{table}[b!]
 	\centering
 	%\begin{adjustbox}{width=0.45\textwidth}
-		\begin{tabular}{cccc}
-			\toprule
-			Dataset	& Cubes	& Cylinders &	Spheres	\\
-			\midrule
-			CoGenT A &  Family A  & Family B 	&	Any color  \\
-			CoGenT B	&	Family B  &	Family A	&	Any color \\
-			\bottomrule
-		\end{tabular}
+	\begin{tabular}{cccc}
+		\toprule
+		Variant	& Cubes	& Cylinders &	Spheres	\\
+		\midrule
+		CLEVR &  Any Color  & Any Color 	&	Any color  \\
+		CoGenT-A &  Family A  & Family B 	&	Any color  \\
+		CoGenT-B	&	Family B  &	Family A	&	Any color \\
+		\bottomrule
+	\end{tabular}
 	%\end{adjustbox}
-	\caption{Restrictions on feature combinations in A \& B conditions of the CoGenT variant of the CLEVR dataset.}%\vspace{2pts}
+	\caption{Allowed feature combinations in the CoGenT-A and CoGenT-B variants of the CLEVR dataset.}%\vspace{2pts}
 	\label{tab:cogent_conditions}
 \end{table}
 
-For CLEVR, we consider the 5 question categories defined by the authors: \textit{Exist}, \textit{Count}, \textit{CompareInteger}, \textit{CompareAttribute}, \textit{QueryAttribute}. We also consider the CoGenT (Constrained Generalization Test) variant of CLEVR which contains 2 conditions, differing by the available combinations of 8 object color-attributes. The colors are partitioned into two complementary families:
-Gray, Blue, Brown and Yellow in \textbf{Family A} and Red, Green, Purple, Cyan in \textbf{Family B}.
-The cubes and cylinders take colors from complementary families in each variant with opposite configurations while the spheres can take any color (See~\cref{tab:cogent_conditions}).
-As the input domain consist of the set of objects with all attribute values, both variants differ by their marginal distributions $P_S$ and $P_T$.
-
-We compare SAMNet's performance to several models: Transparency by Design networks (TbD)~\cite{mascharka2018transparency}, Feature-wise Linear Modulation (FiLM)~\cite{perez2018film} and the Program Generator + Execution Engine (PG + EE), presented in \cite{johnson2017inferring}. For performance reasons, we deactivated the external memory and temporally-related modules in SAMNet as they are unnecessary while reasoning about static images. SAMNet reaches 96.2\% accuracy on CLEVR, compared to 96.9\%, 97.7\% and 98.7\% for PG + EE, FiLM and TbD respectively.
-
-\begin{figure}[!t]
-	\centering
-	\includegraphics[width=0.8\columnwidth]{../img/plots/clevr_baselines.pdf}
-	\caption{Comparison of SAMNet to baseline models~\cite{mascharka2018transparency, perez2018film, johnson2017inferring} on CLEVR.}
-	\label{fig:clevr-baseline-compare}
-\end{figure}
-
-\begin{figure}[htb]
-	\centering
-	\includegraphics[width=\columnwidth]{../img/architecture/hierarchy}
-	\caption{Hierarchy of Task Groups in the COG dataset.}
-	\label{fig:task-groups}
-\end{figure}
-
-\begin{figure*}[htbp]
+\begin{figure*}[t!]
 	\centering
 	\begin{subfigure}{\textwidth}
 		\centering
@@ -65,34 +44,59 @@ We compare SAMNet's performance to several models: Transparency by Design networ
 	\label{fig:samnet_cog_detailed}
 \end{figure*}
 
+\subsection{Basic performance of SAMNet on CLEVR}
+\label{sec:clevr-baseline-compare}
+CLEVR images contain objects characterised by a set of simple atributes (shape, color, size and material), whereas questions are grouped into 5 categories: \textit{Exist}, \textit{Count}, \textit{CompareInteger}, \textit{CompareAttribute}, \textit{QueryAttribute}.
+Along with CLEVR the authors also introduced two CLEVR-CoGenT (Constrained Generalization Test) variants, with varying combinations of color-shape attributes.
+The colors are partitioned into two complementary families:
+Gray, Blue, Brown and Yellow in Family A; and Red, Green, Purple, Cyan in Family B.
+The cubes and cylinders take colors from complementary families in each variant with opposite configurations; the spheres can take any color in both varianrs (See~\cref{tab:cogent_conditions}).
+As the input domain consist of the set of objects with all attribute values, both variants differ by their marginal distributions $P_S$ and $P_T$.
 
-\subsection{Performance of SAMNet on COG}
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.8\columnwidth]{../img/plots/clevr_baselines.pdf}
+	\caption{Comparison of SAMNet to baselines on CLEVR.}
+	\label{fig:clevr_baselines}
+\end{figure}
+
+
+We compare SAMNet's performance to selected SOTA models, namely Transparency by Design networks (TbD)~\cite{mascharka2018transparency}, Feature-wise Linear Modulation (FiLM)~\cite{perez2018film} and the Program Generator + Execution Engine (PG + EE)~\cite{johnson2017inferring}.
+For performance reasons, we deactivated the external memory and temporal-related modules in SAMNet as they are unnecessary while reasoning about static images.
+As presented in \cref{fig:clevr_baselines}, SAMNet reaches comparable 96.2\% accuracy, compared to 96.9\%, 97.7\% and 98.7\% for PG + EE, FiLM and TbD respectively.
+
+
+\subsection{Basic performance of SAMNet on COG}
 \label{sec:cog-baseline-compare}
 
-% \tk{description of dataset, task families/groups}
-% \tk{figure 5 from the orig paper}
-% \tk{comparison of our model with baseline - pure COG, no transfer learning}
-% \tk{figure 3 from the orig paper}
-% \tk{baseline model~\cite{yang2018dataset}}
-\tk{comparison with results from softpahts?}
-
+GOC dataset contains short videos with the associated questions, grouped into 23 question categories~\footnote{Aside of categorical questions, COG also offers tasks expecting the model to point a particular object in the image (out of scope of this paper).}.
+COG comes in two variants: the Canonical (easy) and Hard, differing mainly on the number of frames in the video, the maximum amount of look-back in frame history containing relevant information for reasoning, and the number of object distractors (see~\cref{tab:cog_variants}).
+Since the number of task classes is large, we designed a 2-level hierarchy of task groups using the
+description of tasks, as shown in~\cref{fig:task-groups}.
 
 \begin{table}[ht]
 	\centering
-		\begin{tabular}{lccc}
-			\toprule
-			Variant	& Frames & History	& Distractors \\
-			\midrule
-			Canonical (Easy) & 4 & 3 & 1\\
-			Hard  & 8 & 7 & 10\\
-			\bottomrule
-		\end{tabular}
+	\begin{tabular}{lccc}
+		\toprule
+		Variant	& Frames & History	& Distractors \\
+		\midrule
+		Canonical (Easy) & 4 & 3 & 1\\
+		Hard  & 8 & 7 & 10\\
+		\bottomrule
+	\end{tabular}
 	\caption{Details of the Canonical and Hard variants of COG.}
 	\label{tab:cog_variants}
-\end{table}\vspace{5pt}
+\end{table}
 
-There are 23 classification question categories in COG. The Canonical (easy) and Hard variant differ mainly on the number of frames in the video, the maximum amount of look-back in frame history containing relevant information for reasoning, and the number of object distractors (see~\cref{tab:cog_variants}). Since the number of task classes is large, we designed a 2-level hierarchy of task groups using the
-description of these tasks, as shown in~\cref{fig:task-groups}.
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=\columnwidth]{../img/architecture/hierarchy}
+	\caption{Hierarchy of Task Groups in the COG dataset.}
+	\label{fig:task-groups}
+\end{figure}
+
+
 
 For groups at the lowest level, we chose the following task classes to be placed in those groups.
 Below, substitute each of \textit{Shape} and \textit{Color} for  \uX{} to obtain the task class.
@@ -106,27 +110,22 @@ Below, substitute each of \textit{Shape} and \textit{Color} for  \uX{} to obtain
 \end{description}
 
 
-We trained SAMNet using $k = 8$ reasoning steps and external memory of 8 address locations, each storing an array of 128 floats. We compared our results with the baseline model introduced in the same paper as the COG dataset~\cite{yang2018dataset}.
+We compared our results with the baseline model introduced in the same paper as the COG dataset~\cite{yang2018dataset}.
 The most important results are highlighted in~\cref{fig:samnet_cog_detailed}; full comparison can be found in the supplementary material.
 
 For the Canonical variant (top row), we achieve similar accuracies for the majority of tasks (with a total average accuracy of 98.0\%, compared to 97.6\% for the baseline model), with significant improvements (around 13 points) for \textit{AndCompare} tasks.
-As these tasks focus on compositional questions referring to two objects, we hypothesize that our model achieves better accuracy due to its ability to selectively pick and store relevant objects from the past frames in memory.
+As these tasks focus on compositional questions referring to two objects, we hypothesize that our model achieves better accuracy due to its ability to selectively pick and store relevant objects from the past frames in its external memory.
 For the Hard variant, we achieve a total average accuracy of 96.1\% compared to 80.1\% for the baseline model, demonstrating that our model can adapt to larger number of frames and distractors.
-Despite there being some tasks in the Canonical variant where SAMNet achieved slightly lower accuracies, when comparing performances on the Hard variant, it improves upon the baseline model on all tasks, with improvements varying from 0.5 to more than 30 points, and especially on the more complex tasks in the dataset.
+SAMNet improves upon the baseline model on all tasks, with improvements varying from 0.5 to more than 30 points, shining in the most complex (\textit{AndCompare}\uX, \textit{Compare}\uX) tasks.
 
 
-\subsection{Feature transfer in CLEVR-CoGenT}
+\subsection{Feature transfer using CLEVR-CoGenT}
 \label{sec:feature}
 
-% \tk{comparison of our model with baselines - CoGenT}
-% \tk{figure 3 from the orig paper}
-
-We conduct 2 experiments with SAMNet trained on CoGenT-A to evaluate its feature transfer capacity:
-\begin{itemize}
-\compresslist
-\item an immediate test (zero-shot learning) from A to B; and
-\item fine-tuning for a single epoch on 30k samples from CoGenT-B (following~\cite{johnson2017inferring, mascharka2018transparency, perez2018film, marois2018transfer}).
-\end{itemize}
+In order to quantify SAMNet feature transfer capabilities we used the CoGenT variants of CLEVR and performed set of experiments, starting from training on CoGenT-A followed by:
+an immediate test (zero-shot learning) to test split ot CoGenT-B; and fine-tuning for a single epoch on 30k samples from CoGenT-B before testing (following methodology used in~\cite{johnson2017inferring, mascharka2018transparency, perez2018film, marois2018transfer}).
+In \cref{fig:CoGenT-B-results} we compare the achieved performance with the previously selected SOTA models. 
+As sanity check we also provide accuracies achieved when: tested directly on CoGenT-A; and tested on CoGenT-A after fine-tuning on B.
 
 \begin{figure}[htbp]
 	\centering
@@ -135,7 +134,12 @@ We conduct 2 experiments with SAMNet trained on CoGenT-A to evaluate its feature
 	\label{fig:CoGenT-B-results}
 \end{figure}
 
-We compare SAMNet to TbD~\cite{mascharka2018transparency}, FiLM~\cite{perez2018film} and PG + EE~\cite{johnson2017inferring}. \cref{fig:CoGenT-B-results} shows the results. Performance of SAMNet on CoGenT is clearly worse on CoGenT-B than CoGenT-A, but shows better zero-shot generalization than TbD. Fine-tuning for a single epoch allows an observable increase of 15 pts on CoGenT-B, and a slight drop on CoGenT-A. After finetuning on CoGenT-B, SAMNet limits catastrophic forgetting on CoGenT-A, contrarily to FilM and PG + EE.
+When training and testing on CoGenT-A, SAMNet performs slightly worse than the other models.
+In the case of zero-shot transfer to CoGenT-B all models show relatively good performance (around 75 percent), still being a significant decrease of accuracy (by 17 points)
+As expected, all models are able to recove performance when fine-tuned on CoGenT-B.
+This process results in degradation of performance on originallly mastered CoGenT-A, with SAMNet and TbD showing clear capabilities to limit the impact of catastrophic forgetting.
+This indicates that both SAMNet and TbD managed to develop and sustain (to some extent) representations of features when facing shift from one domain to the other.
+Still, the drop in zero-shot transfer suggests that both struggle with disentanglement of shape and color features.
 
 \subsection{Temporal transfer in COG}
 \label{sec:temporal}
